--- a/index.html
+++ b/index.html
@@ -138,9 +138,10 @@
     <div class="artists"> </div>
   </section>
   <section class="partners">
-    <div class="spon-p-div justify-content-center">
+    <div class="spon-p-div" justify-content-center">
       <p class="spon-h">SPONSORS</p>
-     <div class="line1"><hr></div>
+      <hr>
+    </div>
     </div>
     <div class="sponsor justify-content-center d-flex">
      <div class="sponsor1"><img id="sp1" class="img-fluid" src="assets/images/moster.png" alt="monster energy drink logo">
