--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
   </section>
 
   <section class="about2">
-    <div class="about2-div">
+    <div class="about2-div container">
       <div class="about2-txt">Back To Roots Global Concert 2012 Logo
         <div><img class="about-line" src="assets/images/line3.svg" alt=""></div>
       </div>
@@ -98,18 +98,24 @@
   <section class="partners">
     <div class="spon-p-div justify-content-center">
       <p class="spon-h">SPONSORS</p>
-     <div class="line1"><hr></div>
+      <div class="line1"><hr></div>
     </div>
     <div class="sponsor justify-content-center d-flex">
-     <div class="sponsor1"><img id="sp1" class="img-fluid" src="assets/images/moster.png" alt="monster energy drink logo">
-      <img id="sp2" class="img-fluid" src="assets/images/ford-logo.png" alt="ford logo"></div>
-      <div class="sponsor1"><img id="sp3" class="img-fluid" src="assets/images/coca.png" alt="coca-cola logo">
-      <img id="sp4" class="img-fluid" src="assets/images/yamaha.png" alt="yamaha logo"></div>
+      <div class="sponsor1">
+        <img id="sp1" class="img-fluid" src="assets/images/moster.png" alt="monster energy drink logo">
+        <img id="sp2" class="img-fluid" src="assets/images/ford-logo.png" alt="ford logo">
+      </div>
+      <div class="sponsor1">
+        <img id="sp3" class="img-fluid" src="assets/images/coca.png" alt="coca-cola logo">
+        <img id="sp4" class="img-fluid" src="assets/images/yamaha.png" alt="yamaha logo">
+      </div>
     </div>
   </section>
 
   <footer class="foot1 pt-5">
-    <div class="btr-div"><img class="btr" src="assets/images/BTR-Logo.png" alt="BTR Logo"></div>
+    <div class="btr-div">
+      <img class="btr" src="assets/images/BTR-Logo.png" alt="BTR Logo">
+    </div>
     <div class="foot1-div">
       <p class="foot1-p">2012 Back To Roots. Some rights Reserved.</p>
     </div>
